# noosphere

./: .env.example  .gitignore  LLM-Ontology.ipynb  README.md  entities.txt  exclusion.dic  llama-index.ipynb  llm-ontology.ipynb  orchestrator-prompt.txt  packages-temp.txt  pyproject.toml  requirements.txt
colab/: LightRAG.ipynb  Native_RAG_BM25.ipynb  Native_RAG_FAISS.ipynb
configurations/: chat_openai.py  configuration.py  cypher_chat_openai.py  default.py  neo4j.py  openai_embeddings.py
frames-benchmark/: frames_benchmark_record.py  import.ipynb  load_csv.py  reasoning_type.py  sro.py  test.ipynb  truncate.ipynb
import/: frames_benchmark_record.py  import.py  load_csv.py  reasoning_type.py  redirected_links.py  statistics.py  statistics_record.py
lightrag/: entity_relationship_content_keywords.py  lightrag.py  llm.py  operate.py  prompt.py
package/: __init__.py  change.py  crud.py  relation_kind.py  table_generator.py  utilities.py
tests/: test_change.py  test_utilities.py
