[tool.poetry]
name = "noosphere"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
faiss-cpu = "^1.9.0"
inflection = "^0.5.1"
langchain = "^0.3.7"
langchain-community = "^0.3.7"
langchain-openai = "^0.2.8"
neo4j = "^5.26.0"
nest-asyncio = "^1.6.0"
peewee = "^3.17.7"
pyarrow = "^18.0.0"
pydantic = "^2.9.2"
pylint = "^3.3.1"
python-dotenv = "^1.0.1"
python-string-utils = "^1.0.0"
pyyaml = "^6.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = [
    "poetry-core",
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"
